--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,6 @@
-<% provide(:title, "Home") %>
-<h1>home App</h1>
+
+<% provide(:title, "Contact") %>
+<h1>contact App</h1>
 <p>
   This is the home page for the
   <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
