Complete advanced testing setup

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,6 @@
 
 <% provide(:title, "About") %>
-<h1>about App</h1>
+<h1>about fugafuga App</h1>
 <p>
   This is the home page for the
   <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
